protoiptables.rules
# Generated by iptables-save v1.4.4 on Thu Jul 15 01:43:03 2010
*security
:INPUT ACCEPT [270:31771]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [240:134560]
COMMIT
# Completed on Thu Jul 15 01:43:03 2010
# Generated by iptables-save v1.4.4 on Thu Jul 15 01:43:03 2010
*raw
:PREROUTING ACCEPT [282:35369]
:OUTPUT ACCEPT [240:134560]
COMMIT
# Completed on Thu Jul 15 01:43:03 2010
# Generated by iptables-save v1.4.4 on Thu Jul 15 01:43:03 2010
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Jul 15 01:43:03 2010
# Generated by iptables-save v1.4.4 on Thu Jul 15 01:43:03 2010
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jul 15 01:43:03 2010
# Generated by iptables-save v1.4.4 on Thu Jul 15 01:43:03 2010
*filter
:FORWARD ACCEPT [0:0]
:INPUT DROP [0:0]
:OUTPUT ACCEPT [0:0]
# Accept traffic from internal interfaces
-A INPUT ! -i eth0 -j ACCEPT
# Accept traffic with the ACK flag set
-A INPUT -p tcp -m tcp --tcp-flags ACK ACK -j ACCEPT
# Allow incoming data that is part of a connection we established
-A INPUT -m state --state ESTABLISHED -j ACCEPT
# Allow data that is related to existing connections
-A INPUT -m state --state RELATED -j ACCEPT
# Accept responses to DNS queries
-A INPUT -p udp -m udp --dport 1024:65535 --sport 53 -j ACCEPT
# Accept responses to our pings
-A INPUT -p icmp -m icmp --icmp-type echo-reply -j ACCEPT
# Accept notifications of unreachable hosts
-A INPUT -p icmp -m icmp --icmp-type destination-unreachable -j ACCEPT
# Accept notifications to reduce sending speed
-A INPUT -p icmp -m icmp --icmp-type source-quench -j ACCEPT
# Accept notifications of lost packets
-A INPUT -p icmp -m icmp --icmp-type time-exceeded -j ACCEPT
# Accept notifications of protocol problems
-A INPUT -p icmp -m icmp --icmp-type parameter-problem -j ACCEPT
# Application Ports
-A INPUT -p tcp -m tcp -m multiport -j ACCEPT --dports www,https,10000
# Allow connections to our SSH server
-A INPUT -p tcp -m tcp --dport ssh -j ACCEPT
# Allow connections to our IDENT server
-A INPUT -p tcp -m tcp --dport auth -j ACCEPT
# Quench traceroute range
-A INPUT -p udp -m udp --dport 33434:33534 -j DROP
# allow ping
-A INPUT -p icmp -m icmp --icmp-type echo-request -j ACCEPT
COMMIT
# Completed on Thu Jul 15 01:43:03 2010
